<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:hint="@string/zero"
        android:textAlignment="viewEnd"
        android:textColor="#8E24AA"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

    </TextView>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="8dp"
        android:background="@color/viewColor"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="0dp">

    </View>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="4">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_9"
                style="@style/normalButton"
                android:text="@string/_9"
                android:textStyle="bold">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_AllClear"
                style="@style/operatorButton"
                android:text="@string/ac"
                android:textStyle="bold">

            </com.google.android.material.button.MaterialButton>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_clear"
                style="@style/operatorButton"
                android:text="C"
                android:textStyle="bold">

            </com.google.android.material.button.MaterialButton>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_divide"
                style="@style/operatorButton"
                android:text="@string/divide"
                android:textStyle="bold">

            </com.google.android.material.button.MaterialButton>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_6"
                style="@style/normalButton"
                android:text="@string/_6"
                android:textStyle="bold">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_7"
                style="@style/normalButton"
                android:text="@string/_7"
                android:textStyle="bold">

            </com.google.android.material.button.MaterialButton>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_8"
                style="@style/normalButton"
                android:text="@string/_8"
                android:textStyle="bold">

            </com.google.android.material.button.MaterialButton>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multiply"
                style="@style/operatorButton"
                android:text="@string/multiply"
                android:textStyle="bold">

            </com.google.android.material.button.MaterialButton>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_3"
                style="@style/normalButton"
                android:text="@string/_3"
                android:textStyle="bold">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_4"
                style="@style/normalButton"
                android:text="@string/_4"
                android:textStyle="bold">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_5"
                style="@style/normalButton"
                android:text="@string/_5"
                android:textStyle="bold">

            </com.google.android.material.button.MaterialButton>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_subtract"
                style="@style/operatorButton"
                android:text="@string/subtract"
                android:textStyle="bold">

            </com.google.android.material.button.MaterialButton>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_0"
                style="@style/normalButton"
                android:text="@string/zero"
                android:textStyle="bold">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_1"
                style="@style/normalButton"
                android:text="@string/_1"
                android:textStyle="bold">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_2"
                style="@style/normalButton"
                android:text="@string/_2"
                android:textStyle="bold">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_plus"
                style="@style/operatorButton"
                android:text="@string/sum"
                android:textSize="25sp"
                android:textStyle="bold">

            </com.google.android.material.button.MaterialButton>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="4">


            <Button
                android:id="@+id/button_Equal"
                style="@style/operatorButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/equal" />


        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>